<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AmbilAntrian">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_xxl"

        android:text="@string/nomor_antrian_title"
        android:textSize="@dimen/text_Header"
        android:gravity="center_horizontal"

        android:fontFamily="@font/righteous"
        android:textColor="@color/teal" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/shape1"
            android:layout_width="500dp"
            android:layout_height="500dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_circle_icon" />

        <TextView
            android:id="@+id/tv_antrian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/value"
            android:textSize="@dimen/text_Header"
            android:textStyle="bold"

            android:fontFamily="@font/poppins"
            android:textColor="@color/white"

            app:layout_constraintBottom_toBottomOf="@+id/shape1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_poli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/poli"
        android:textSize="@dimen/text_xxl"
        android:layout_gravity="center_horizontal"

        android:fontFamily="@font/barlow_bold"
        android:textColor="@color/teal" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="@dimen/dimen_xxl"
        android:layout_marginBottom="@dimen/dimen_xxl"
        android:layout_marginLeft="@dimen/dimen_m"
        android:layout_marginRight="@dimen/dimen_m"

        app:cardCornerRadius="@dimen/dimen_l"
        android:backgroundTint="@color/teal_dark" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/dimen_l"

                android:fontFamily="@font/barlow_bold"
                android:text="@string/antrian_saat_ini"

                android:textColor="@color/white"
                android:textSize="@dimen/text_xxl"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_antrian_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="32dp"
                android:fontFamily="@font/barlow_bold"

                android:text="@string/value"
                android:textSize="@dimen/text_xxl"

                android:textColor="@color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>